--- a/.github/workflows/main_mf31-fileshare.yml
+++ b/.github/workflows/main_mf31-fileshare.yml
@@ -62,12 +62,10 @@ jobs:
         run: unzip release.zip
 
       
-      - name: Login to Azure
-        uses: azure/login@v2
+      - name: Log in to Azure CLI using service principal
+        uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_3C23712E01894FD0B511977B37F32484 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CF934CD9BCDD4D269A2AE11178BA33BA }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_04589A635D7B4982AC61C669D8965E61 }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
